spacing issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ a {
   justify-content: center;
   align-items: flex-start;
   margin-bottom: 20px;
-  width: 100%;
+  width: 90%;
   padding: 1em;
   border-radius: 10px;
 }
